--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -28,5 +28,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Todo
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="newTask">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> New Task
+            </NavLink>
+        </div>
     </nav>
 </div>
