--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -1,4 +1,5 @@
-﻿@page "/desk"
+﻿@inject NavigationManager _navigationManager
+@page "/desk"
 
 <h3>AuxDesk</h3>
 
@@ -10,7 +11,9 @@
                 <div class="input-group mb-3  text-center">
                     <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
                     <input type="date" class="form-control" aria-label="Sizing example input" @bind="taskDate" aria-describedby="inputGroup-sizing-default">
+                    
                 </div>
+                <button type="button" class="btn btn-primary" style="width:100%" @onclick="DirectToNewTask" ><b>+</b></button>
             </div>
         </div>
         <div class="col">
@@ -27,4 +30,9 @@
 
 @code {
     DateOnly taskDate = DateOnly.FromDateTime(DateTime.UtcNow);
+
+    private void DirectToNewTask()
+    {
+        _navigationManager.NavigateTo("/newTask");
+    }
 }
