--- a/Components/Pages/NewTask.razor
+++ b/Components/Pages/NewTask.razor
@@ -1,44 +1,139 @@
-﻿@page "/newTask"
+﻿@using Data;
+@using Microsoft.Maui.Storage
+@using System.IO
+@using System.Text.Json
+
+@inject NavigationManager _navigationManager;
+@page "/newTask"
 
 <h3>NewTask</h3>
 
 <div class="input-group mb-3">
-    <input type="text" class="form-control" aria-label="Text input with dropdown button" placeholder="Title">
+    <input type="text" class="form-control" aria-label="Text input with dropdown button" placeholder="Title..." @bind="taskTitle">
     <div class="dropdown">
-        <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdown" type="button">
+        <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button">
             @selectedPriority
         </button>
-        <ul class="dropdown-menu @(isDropdownOpen ? "show" : "")" style="@(isDropdownOpen ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
-            <li><a class="dropdown-item" @onclick="@( () => SelectPriority("High"))">High</a></li>
-            <li><a class="dropdown-item" @onclick="@( () => SelectPriority("Medium"))">Medium</a></li>
-            <li><a class="dropdown-item" @onclick="@(() => SelectPriority("Low"))">Low</a></li>
+        <ul class="dropdown-menu @(isDropdownOpenPriorty ? "show" : "")" style="@(isDropdownOpenPriorty ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
+            <li><a class="dropdown-item" @onclick="@( () => SelectPriority(1))">High</a></li>
+            <li><a class="dropdown-item" @onclick="@( () => SelectPriority(2))">Medium</a></li>
+            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(3))">Low</a></li>
         </ul>
     </div>
 </div>
 
 <div class="input-group mb-3">
-    <span class="input-group-text" id="inputGroup-sizing-default">Start Date</span>
-    <input type="date" class="form-control" aria-label="Sizing example input" @bind="taskDate" aria-describedby="inputGroup-sizing-default">
+    <span class="input-group-text" @bind="taskDate" id="inputGroup-sizing-default">Start Date</span>
+    <input type="date" class="form-control" aria-label="Sizing example input" @bind="taskDate">
 </div>
 
 <div class="input-group">
-    <textarea class="form-control" aria-label="With textarea" placeholder="Notes" height="30%"></textarea>
+    <textarea class="form-control" aria-label="With textarea" placeholder="Notes" height="30%" @bind="taskNotes"></textarea>
 </div>
 
+<div class="btn-toolbar" role="toolbar" style="margin-top:16px">
+    <div class="btn-group">
+        <button type="button" class="btn btn-primary" @onclick="CreateTask">Create</button>
+    </div>
+    <div class="btn-group" style="padding-left:8px">
+        <button type="button" class="btn btn-danger" @onclick="CancelTask">Cancel</button>
+    </div>
+</div>
 @code {
-    private bool isDropdownOpen = false;
-    private string selectedPriority = "Priority";
 
-    private void ToggleDropdown()
-    {
-        isDropdownOpen = !isDropdownOpen;
-    }
+    private List<UserTask> listUserTasks = new();
+    private string? taskTitle;
+    private string? taskNotes;
+    private int taskPriority = 2;
 
-    private void SelectPriority(string priority)
-    {
-        selectedPriority = priority;
-        isDropdownOpen = false;
-    }
+    //private DateOnly taskDate;
 
     DateOnly taskDate = DateOnly.FromDateTime(DateTime.UtcNow);
+
+    private bool isDropdownOpenPriorty = false;
+    private string selectedPriority = "Medium";
+
+    protected override void OnInitialized()
+    {
+        Load();
+    }
+
+    private void ToggleDropdownPriority()
+    {
+        isDropdownOpenPriorty = !isDropdownOpenPriorty;
+    }
+
+    private void SelectPriority(int priority)
+    {
+        taskPriority = priority;
+        isDropdownOpenPriorty = false;
+
+        if (priority == 1)
+        {
+            selectedPriority = "High";
+        }
+        if (priority == 2)
+        {
+            selectedPriority = "Medium";
+        }
+        else
+        {
+            selectedPriority = "Low";
+        }
+    }
+    private void CancelTask()
+    {
+        _navigationManager.NavigateTo("/desk");
+    }
+
+    private async Task CreateTask()
+    {
+        if (!string.IsNullOrWhiteSpace(taskTitle))
+        {
+            string taskGUID = Guid.NewGuid().ToString();
+
+            TaskData taskData = new TaskData
+            {
+                TaskGUID = taskGUID,
+                Title = taskTitle,
+                Notes = taskNotes,
+            };
+
+            listUserTasks.Add(new UserTask
+            {
+                TaskGUID = taskGUID,
+                AssignedDate = taskDate,
+                Priority = taskPriority,
+                UserTaskData = taskData
+            });
+
+            taskTitle = string.Empty;
+            taskNotes = string.Empty;
+            taskPriority = 1;
+            taskDate = DateOnly.FromDateTime(DateTime.UtcNow);
+
+            await Save();
+        }
+    }
+    private async Task Save()
+    {
+        var contents = JsonSerializer.Serialize(listUserTasks);
+
+        // FileSystem.AppDataDirectory - points to your app’s sandboxed data folder
+        var path = Path.Combine(FileSystem.AppDataDirectory, "userTasks.json");
+
+        File.WriteAllText(path, contents);
+
+        Console.WriteLine("List Saved", $"List has been saved to {path}");
+    }
+    private void Load()
+    {
+        var path = Path.Combine(FileSystem.AppDataDirectory, "userTasks.json");
+        if (!File.Exists(path))
+            return;
+        var contents = File.ReadAllText(path);
+        var savedItems = JsonSerializer.Deserialize<List<UserTask>>(contents);
+        listUserTasks.Clear();
+        listUserTasks.AddRange(savedItems);
+    }
 }
