--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -3,28 +3,57 @@
 
 <h3>AuxDesk</h3>
 
-<div class="container">
-    <div class="row gx-3">
-        <div class="col">
-            <div class="p-2">
-                <h5><b>Weeks Tasks</b></h5>
-                <div class="input-group mb-3  text-center">
-                    <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
-                    <input type="date" class="form-control" aria-label="Sizing example input" @bind="taskDate" aria-describedby="inputGroup-sizing-default">
+<div class="row gx-3">
+    <div class="col">
+        <div class="p-2">
+            <h5><b>Weeks Tasks</b></h5>
+            <div class="input-group mb-3  text-center">
+                <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
+                <input type="date" class="form-control" aria-label="Sizing example input" @bind="taskDate" aria-describedby="inputGroup-sizing-default">
                     
+            </div>
+            <button type="button" class="btn btn-primary" style="width:100%" @onclick="DirectToNewTask" ><b>+</b></button>
+        
+        <div class="card" style="margin-top:8px">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h6 class="card-title"><b>Card title</b></h6>
+                    </div>
+                    <div class="col" >
+                        <p class="text-center fw-semibold" style="background-color:#fd7e14;border-radius:4px">High</p>
+                    </div>
                 </div>
-                <button type="button" class="btn btn-primary" style="width:100%" @onclick="DirectToNewTask" ><b>+</b></button>
+                <div class="row">
+                    <div class="col">
+                        <p class="text-center fw-semibold" style="width:100px;background-color:#dee2e6;border-radius:4px">Not started</p>
+                    </div>
+                    <div class="col">
+                        <div class="btn-toolbar" role="toolbar">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-primary">Open</button>
+                            </div>
+                            <div class="btn-group" style="padding-left:8px">
+                                <button type="button" class="btn btn-danger">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col">
-            <div class="p-2">Task</div>
         </div>
-        <div class="col">
-            <div class="p-2">Timer</div>
-        </div>
-        <div class="col">
-            <div class="p-2">Analytics</div>
-        </div>
+    </div>
+        
+    <div class="col">
+        <div class="p-2">Task</div>
+    </div>
+        
+    <div class="col">
+        <div class="p-2">Timer</div>
+    </div>
+        
+    <div class="col">
+        <div class="p-2">Analytics</div>
     </div>
 </div>
 
