--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -1,4 +1,10 @@
-﻿@inject NavigationManager _navigationManager
+﻿@using Data;
+@using Microsoft.Maui.Storage
+@using System.IO
+@using System.Text.Json
+
+@inject NavigationManager _navigationManager
+
 @page "/desk"
 
 <h3>AuxDesk</h3>
@@ -9,38 +15,61 @@
             <h5><b>Weeks Tasks</b></h5>
             <div class="input-group mb-3  text-center">
                 <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
-                <input type="date" class="form-control" aria-label="Sizing example input" @bind="taskDate" aria-describedby="inputGroup-sizing-default">
+                <input type="date" class="form-control" aria-label="Sizing example input" @onchange="SelectDate" value="@DateTime.Today.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default">
                     
             </div>
             <button type="button" class="btn btn-primary" style="width:100%" @onclick="DirectToNewTask" ><b>+</b></button>
-        
-        <div class="card" style="margin-top:8px">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col">
-                        <h6 class="card-title"><b>Card title</b></h6>
-                    </div>
-                    <div class="col" >
-                        <p class="text-center fw-semibold" style="background-color:#fd7e14;border-radius:4px">High</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <p class="text-center fw-semibold" style="width:100px;background-color:#dee2e6;border-radius:4px">Not started</p>
-                    </div>
-                    <div class="col">
-                        <div class="btn-toolbar" role="toolbar">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-primary">Open</button>
+            
+            @foreach (UserTask userTask in listDaysUserTasks)
+            {
+                <div class="card" style="margin-top:8px">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <h6 class="card-title"><b>@userTask.UserTaskData.Title</b></h6>
                             </div>
-                            <div class="btn-group" style="padding-left:8px">
-                                <button type="button" class="btn btn-danger">Delete</button>
+                            <div class="col" >
+                                    @if (userTask.Priority == 1) {
+                                        <p class="text-center fw-semibold" style="background-color:red;border-radius:4px">High</p>
+                                    }
+                                    @if (userTask.Priority == 2)
+                                    {
+                                        <p class="text-center fw-semibold" style="background-color:orange;border-radius:4px">Medium</p>
+                                    }
+                                    @if (userTask.Priority == 3)
+                                    {
+                                        <p class="text-center fw-semibold" style="background-color:green;border-radius:4px">Low</p>
+                                    }
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                @if (userTask.StartDateTime == null) {
+                                    <p class="text-center fw-semibold" style="width:100px;background-color:#dee2e6;border-radius:4px">Not started</p>
+                                }
+                                @if (userTask.StartDateTime != null && !userTask.IsDone)
+                                {
+                                    <p class="text-center fw-semibold" style="width:100px;background-color:yellow;border-radius:4px">In progress</p>
+                                }
+                                @if (userTask.IsDone)
+                                {
+                                    <p class="text-center fw-semibold" style="width:100px;background-color:green;border-radius:4px">Done</p>
+                                }
+                            </div>
+                            <div class="col">
+                                <div class="btn-toolbar" role="toolbar">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-primary">Open</button>
+                                    </div>
+                                    <div class="btn-group" style="padding-left:8px">
+                                        <button type="button" class="btn btn-danger">Delete</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+            }
         </div>
     </div>
         
@@ -58,10 +87,41 @@
 </div>
 
 @code {
-    DateOnly taskDate = DateOnly.FromDateTime(DateTime.UtcNow);
+
+    private List<UserTask> listDaysUserTasks = new List<UserTask>();
+    DateOnly taskDate;
+
+    protected override void OnInitialized()
+    {
+        taskDate = DateOnly.FromDateTime(DateTime.UtcNow);
+        Load(taskDate);
+    }
 
     private void DirectToNewTask()
     {
         _navigationManager.NavigateTo("/newTask");
+    }
+
+    private void SelectDate(ChangeEventArgs e)
+    {
+        DateOnly newDate;
+
+        DateOnly.TryParse(e.Value.ToString(), out newDate);
+        Load(newDate);
+    }
+
+    private void Load(DateOnly date)
+    {
+        List<UserTask> listUserTasks = new();
+
+        var path = Path.Combine(FileSystem.AppDataDirectory, "userTasks.json");
+        if (!File.Exists(path))
+            return;
+        var contents = File.ReadAllText(path);
+        var savedItems = JsonSerializer.Deserialize<List<UserTask>>(contents);
+        listUserTasks.AddRange(savedItems);
+
+        listDaysUserTasks = listUserTasks.Where(task => task.AssignedDate == date).ToList();
+        listDaysUserTasks = listDaysUserTasks.OrderBy(task => task.Priority).ToList();
     }
 }
