--- a/Components/Pages/NewTask.razor
+++ b/Components/Pages/NewTask.razor
@@ -72,7 +72,7 @@
     }
     private void CancelTask()
     {
-        _navigationManager.NavigateTo("/desk");
+        _navigationManager.NavigateTo("/");
     }
 
     private async Task CreateTask()
