--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -18,5 +18,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> New Task
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="countdown">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Countdown
+            </NavLink>
+        </div>
     </nav>
 </div>
