--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -23,5 +23,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Countdown
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="recycle">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Recycle
+            </NavLink>
+        </div>
     </nav>
 </div>
+
+            
