--- a/Components/Pages/NewTask.razor
+++ b/Components/Pages/NewTask.razor
@@ -42,6 +42,7 @@
 </div>
 @code {
 
+    AuxDeskServices _auxDeskServices = new AuxDeskServices();
     private List<UserTask> listUserTasks = new();
     private string? taskTitle;
     private string? taskNotes;
@@ -54,7 +55,7 @@
 
     protected override void OnInitialized()
     {
-        AuxDeskServices _auxDeskServices = new AuxDeskServices();
+        //AuxDeskServices _auxDeskServices = new AuxDeskServices();
 
         listUserTasks = _auxDeskServices.GetUserTasks();
     }
@@ -109,7 +110,7 @@
     }
     private async Task Save()
     {
-        AuxDeskServices _auxDeskServices = new AuxDeskServices();
+        //AuxDeskServices _auxDeskServices = new AuxDeskServices();
         _auxDeskServices.Save(listUserTasks, null, false);
         await App.Current.MainPage.DisplayAlert("Task Saved", $"Task saved sucessfully", "OK");
     }
