--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -19,9 +19,10 @@
                 <input type="date" class="form-control" aria-label="Sizing example input" @onchange="SelectDate" value="@taskDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default">
             </div>
             <button type="button" class="btn btn-primary" style="width:100%" @onclick="DirectToNewTask" ><b>+</b></button>
-            
+            <div class="row row-cols-2">
             @foreach (UserTask userTask in listDaysUserTasks)
             {
+                <div class="col">
                 <div class="card" style="margin-top:8px">
                     <div class="card-body">
                         <div class="row">
@@ -58,9 +59,6 @@
                             </div>
                             <div class="col">
                                 <div class="btn-toolbar" role="toolbar">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-primary">Open</button>
-                                    </div>
                                     <div class="btn-group" style="padding-left:8px">
                                         <button type="button" class="btn btn-danger" @onclick="() => DeleteTask(userTask.TaskGUID)">Delete</button>
                                     </div>
@@ -69,7 +67,9 @@
                         </div>
                     </div>
                 </div>
+                </div>
             }
+            </div>
             <div class="card" @onclick="ShowProgress" style="margin-top:8px">
                 <div class="card-header"><b>Completed: @CompletedTasks/@TotalTasks</b></div>
                 <div class="card-body" style="display:@ProgressDisplay">
