--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -84,7 +84,7 @@
         <div class="p-2">
             <h5><b>Current Task</b></h5>
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Title..." value="@selectedTask.UserTaskData.Title" disabled>
+                <input type="text" class="form-control" placeholder="Title..." @bind="@selectedTask.UserTaskData.Title" disabled>
                 <div class="dropdown">
                     <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button">
                         @selectedPriority
@@ -98,10 +98,10 @@
             </div>
             <div class="input-group mb-3  text-center">
                 <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
-                <input type="date" class="form-control" aria-label="Sizing example input" value="@selectedTask.AssignedDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default">
+                <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTask.AssignedDate" aria-describedby="inputGroup-sizing-default">
             </div>
             <div class="input-group" style="height:60vh">
-                <textarea class="form-control" aria-label="With textarea" placeholder="Notes">@selectedTask.UserTaskData.Notes</textarea>
+                <textarea class="form-control" aria-label="With textarea" @bind="@selectedTask.UserTaskData.Notes" placeholder="Notes"></textarea>
             </div>
         </div>
     </div>
@@ -148,7 +148,7 @@
     private List<UserTask> FilterTasks(List<UserTask> listUserTasks)
     {
         List<UserTask> filterUserTasks = listUserTasks.Where(task => task.AssignedDate == taskDate).ToList();
-        filterUserTasks = listUserTasks.Where(task => !task.IsDeleted).ToList();
+        filterUserTasks = filterUserTasks.Where(task => !task.IsDeleted).ToList();
         filterUserTasks = filterUserTasks.OrderBy(task => task.Priority).ToList();
 
         return filterUserTasks;
