--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="allTasks">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> All Tasks
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="recycle">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Recycle
             </NavLink>
