--- a/Components/Pages/AllTasks.razor
+++ b/Components/Pages/AllTasks.razor
@@ -40,7 +40,7 @@
                         <div class="row">
                             <div class="col">
                                 @if (userTask.StartDateTime == null) {
-                                    <p class="text-center fw-semibold" style="width:100px;background-color:#dee2e6;border-radius:4px">Not started</p>
+                                    <p class="text-center fw-semibold" style="width:100px;background-color:green;border-radius:4px">Not started</p>
                                 }
                                 @if (userTask.StartDateTime != null && !userTask.IsDone)
                                 {
@@ -89,7 +89,7 @@
                             <div class="col">
                                 @if (userTask.StartDateTime == null)
                                 {
-                                    <p class="text-center fw-semibold" style="width:100px;background-color:#dee2e6;border-radius:4px">Not started</p>
+                                    <p class="text-center fw-semibold" style="width:100px;background-color:green;border-radius:4px">Not started</p>
                                 }
                                 @if (userTask.StartDateTime != null && !userTask.IsDone)
                                 {
@@ -136,7 +136,7 @@
                             <div class="col">
                                 @if (userTask.StartDateTime == null)
                                 {
-                                    <p class="text-center fw-semibold" style="width:100px;background-color:#dee2e6;border-radius:4px">Not started</p>
+                                    <p class="text-center fw-semibold" style="width:100px;background-color:green;border-radius:4px">Not started</p>
                                 }
                                 @if (userTask.StartDateTime != null && !userTask.IsDone)
                                 {
@@ -183,7 +183,7 @@
                             <div class="col">
                                 @if (userTask.StartDateTime == null)
                                 {
-                                    <p class="text-center fw-semibold" style="width:100px;background-color:#dee2e6;border-radius:4px">Not started</p>
+                                    <p class="text-center fw-semibold" style="width:100px;background-color:green;border-radius:4px">Not started</p>
                                 }
                                 @if (userTask.StartDateTime != null && !userTask.IsDone)
                                 {
