--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -46,7 +46,7 @@
                         <div class="row">
                             <div class="col">
                                 @if (userTask.StartDateTime == null) {
-                                    <p class="text-center fw-semibold" style="width:100px;background-color:#dee2e6;border-radius:4px">Not started</p>
+                                    <p class="text-center fw-semibold" style="width:100px;background-color:green;border-radius:4px">Not started</p>
                                 }
                                 @if (userTask.StartDateTime != null && !userTask.IsDone)
                                 {
