--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -13,8 +13,9 @@
 <div class="row gx-3">
     <div class="col">
         <div class="p-2">
-            <h5><b>Weeks Tasks</b></h5>
-            <div class="input-group mb-3  text-center">
+            <h6><b>Weeks Tasks</b></h6>
+            <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
+            <div class="input-group mb-3 text-center">
                 <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
                 <input type="date" class="form-control" aria-label="Sizing example input" @onchange="SelectDate" value="@taskDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default">
             </div>
@@ -77,12 +78,14 @@
                     <h6>In progress: @InProgressTasks</h6>
                 </div>
             </div>
+            </div>
         </div>
     </div>
         
     <div class="col">
         <div class="p-2">
-            <h5><b>Current Task</b></h5>
+            <h6><b>Current Task</b></h6>
+            <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Title..." @bind="@selectedTask.UserTaskData.Title" disabled>
                 <div class="dropdown">
@@ -102,6 +105,7 @@
             </div>
             <div class="input-group" style="height:60vh">
                 <textarea class="form-control" aria-label="With textarea" @bind="@selectedTask.UserTaskData.Notes" placeholder="Notes"></textarea>
+            </div>
             </div>
         </div>
     </div>
