--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -13,7 +13,7 @@
 <div class="row gx-3">
     <div class="col">
         <div class="p-2">
-            <h6><b>Weeks Tasks</b></h6>
+            <h6><b>Days Tasks</b></h6>
             <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
             <div class="input-group mb-3 text-center">
                 <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
@@ -89,7 +89,7 @@
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Title..." @bind="@selectedTask.UserTaskData.Title" disabled>
                 <div class="dropdown">
-                    <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button">
+                    <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button" disabled>
                         @selectedPriority
                     </button>
                     <ul class="dropdown-menu @(isDropdownOpenPriorty ? "show" : "")" style="@(isDropdownOpenPriorty ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
@@ -101,10 +101,16 @@
             </div>
             <div class="input-group mb-3  text-center">
                 <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
-                <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTask.AssignedDate" aria-describedby="inputGroup-sizing-default">
-            </div>
+                    @if (selectedTask.TaskGUID != "")
+                    {
+                        <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTask.AssignedDate" aria-describedby="inputGroup-sizing-default" disabled>
+                    } else
+                    {
+                        <input type="date" class="form-control" aria-label="Sizing example input" value="@todayDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default" disabled>
+                    }
+                </div>
             <div class="input-group" style="height:60vh">
-                <textarea class="form-control" aria-label="With textarea" @bind="@selectedTask.UserTaskData.Notes" placeholder="Notes"></textarea>
+                <textarea class="form-control" aria-label="With textarea" @bind="@selectedTask.UserTaskData.Notes" placeholder="Notes" disabled></textarea>
             </div>
             </div>
         </div>
@@ -116,6 +122,7 @@
     AuxDeskServices _auxDeskServices = new AuxDeskServices();
     private List<UserTask> listDaysUserTasks = new List<UserTask>();
     private UserTask selectedTask = new UserTask();
+    DateOnly todayDate = DateOnly.FromDateTime(DateTime.UtcNow);
     DateOnly taskDate;
     public string ProgressDisplay = "none";
     public int CompletedTasks = 0;
