--- a/Components/Pages/NewTask.razor
+++ b/Components/Pages/NewTask.razor
@@ -9,35 +9,37 @@
 
 <h3>NewTask</h3>
 
-<div class="input-group mb-3">
-    <input type="text" class="form-control" aria-label="Text input with dropdown button" placeholder="Title..." @bind="taskTitle">
-    <div class="dropdown">
-        <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button">
-            @selectedPriority
-        </button>
-        <ul class="dropdown-menu @(isDropdownOpenPriorty ? "show" : "")" style="@(isDropdownOpenPriorty ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
-            <li><a class="dropdown-item" @onclick="@( () => SelectPriority(1))">High</a></li>
-            <li><a class="dropdown-item" @onclick="@( () => SelectPriority(2))">Medium</a></li>
-            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(3))">Low</a></li>
-        </ul>
+<div class="p-2">
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" aria-label="Text input with dropdown button" placeholder="Title..." @bind="taskTitle">
+        <div class="dropdown">
+            <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button">
+                @selectedPriority
+            </button>
+            <ul class="dropdown-menu @(isDropdownOpenPriorty ? "show" : "")" style="@(isDropdownOpenPriorty ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
+                <li><a class="dropdown-item" @onclick="@( () => SelectPriority(1))">High</a></li>
+                <li><a class="dropdown-item" @onclick="@( () => SelectPriority(2))">Medium</a></li>
+                <li><a class="dropdown-item" @onclick="@(() => SelectPriority(3))">Low</a></li>
+            </ul>
+        </div>
     </div>
-</div>
 
-<div class="input-group mb-3">
-    <span class="input-group-text" @bind="taskDate" id="inputGroup-sizing-default">Start Date</span>
-    <input type="date" class="form-control" aria-label="Sizing example input" @bind="taskDate">
-</div>
-
-<div class="input-group" style="height:30vh">
-    <textarea class="form-control" aria-label="With textarea" placeholder="Notes" @bind="taskNotes"></textarea>
-</div>
-
-<div class="btn-toolbar" role="toolbar" style="margin-top:16px">
-    <div class="btn-group">
-        <button type="button" class="btn btn-primary" @onclick="CreateTask">Create</button>
+    <div class="input-group mb-3">
+        <span class="input-group-text" @bind="taskDate" id="inputGroup-sizing-default">Start Date</span>
+        <input type="date" class="form-control" aria-label="Sizing example input" @bind="taskDate">
     </div>
-    <div class="btn-group" style="padding-left:8px">
-        <button type="button" class="btn btn-danger" @onclick="CancelTask">Cancel</button>
+
+    <div class="input-group" style="height:30vh">
+        <textarea class="form-control" aria-label="With textarea" placeholder="Notes" @bind="taskNotes"></textarea>
+    </div>
+
+    <div class="btn-toolbar" role="toolbar" style="margin-top:16px">
+        <div class="btn-group">
+            <button type="button" class="btn btn-primary" @onclick="CreateTask">Create</button>
+        </div>
+        <div class="btn-group" style="padding-left:8px">
+            <button type="button" class="btn btn-danger" @onclick="CancelTask">Cancel</button>
+        </div>
     </div>
 </div>
 @code {
