--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -15,69 +15,69 @@
         <div class="p-2">
             <h6><b>Days Tasks</b></h6>
             <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
-            <div class="input-group mb-3 text-center">
-                <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
-                <input type="date" class="form-control" aria-label="Sizing example input" @onchange="SelectDate" value="@taskDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default">
-            </div>
-            <button type="button" class="btn btn-primary" style="width:100%" @onclick="DirectToNewTask" ><b>+</b></button>
+                <div class="input-group mb-3 text-center">
+                    <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
+                    <input type="date" class="form-control" aria-label="Sizing example input" @onchange="SelectDate" value="@taskDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default">
+                </div>
+                <button type="button" class="btn btn-primary" style="width:100%" @onclick="DirectToNewTask" ><b>+</b></button>
             <div class="row row-cols-2">
             @foreach (UserTask userTask in listDaysUserTasks)
             {
                 <div class="col">
-                <div class="card" style="margin-top:8px">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col" @onclick="() => SelectTask(userTask.TaskGUID)">
-                                <h6 class="card-title"><b>@userTask.UserTaskData.Title</b></h6>
+                    <div class="card" style="margin-top:8px">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col" @onclick="() => SelectTask(userTask.TaskGUID)">
+                                    <h6 class="card-title"><b>@userTask.UserTaskData.Title</b></h6>
+                                </div>
+                                <div class="col" >
+                                        @if (userTask.Priority == 1) {
+                                            <p class="text-center fw-semibold" style="background-color:red;border-radius:4px">High</p>
+                                        }
+                                        @if (userTask.Priority == 2)
+                                        {
+                                            <p class="text-center fw-semibold" style="background-color:orange;border-radius:4px">Medium</p>
+                                        }
+                                        @if (userTask.Priority == 3)
+                                        {
+                                            <p class="text-center fw-semibold" style="background-color:green;border-radius:4px">Low</p>
+                                        }
+                                </div>
                             </div>
-                            <div class="col" >
-                                    @if (userTask.Priority == 1) {
-                                        <p class="text-center fw-semibold" style="background-color:red;border-radius:4px">High</p>
+                            <div class="row">
+                                <div class="col">
+                                    @if (userTask.StartDateTime == null) {
+                                        <p class="text-center fw-semibold" style="width:100px;background-color:green;border-radius:4px">Not started</p>
                                     }
-                                    @if (userTask.Priority == 2)
+                                    @if (userTask.StartDateTime != null && !userTask.IsDone)
                                     {
-                                        <p class="text-center fw-semibold" style="background-color:orange;border-radius:4px">Medium</p>
+                                        <p class="text-center fw-semibold" style="width:100px;background-color:yellow;border-radius:4px">In progress</p>
                                     }
-                                    @if (userTask.Priority == 3)
+                                    @if (userTask.IsDone)
                                     {
-                                        <p class="text-center fw-semibold" style="background-color:green;border-radius:4px">Low</p>
+                                        <p class="text-center fw-semibold" style="width:100px;background-color:green;border-radius:4px">Done</p>
                                     }
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                @if (userTask.StartDateTime == null) {
-                                    <p class="text-center fw-semibold" style="width:100px;background-color:green;border-radius:4px">Not started</p>
-                                }
-                                @if (userTask.StartDateTime != null && !userTask.IsDone)
-                                {
-                                    <p class="text-center fw-semibold" style="width:100px;background-color:yellow;border-radius:4px">In progress</p>
-                                }
-                                @if (userTask.IsDone)
-                                {
-                                    <p class="text-center fw-semibold" style="width:100px;background-color:green;border-radius:4px">Done</p>
-                                }
-                            </div>
-                            <div class="col">
-                                <div class="btn-toolbar" role="toolbar">
-                                    <div class="btn-group" style="padding-left:8px">
-                                        <button type="button" class="btn btn-danger" @onclick="() => DeleteTask(userTask.TaskGUID)">Delete</button>
+                                </div>
+                                <div class="col">
+                                    <div class="btn-toolbar" role="toolbar">
+                                        <div class="btn-group" style="padding-left:8px">
+                                            <button type="button" class="btn btn-danger" @onclick="() => DeleteTask(userTask.TaskGUID)">Delete</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                </div>
             }
             </div>
             <div class="card" @onclick="ShowProgress" style="margin-top:8px">
                 <div class="card-header"><b>Completed: @CompletedTasks/@TotalTasks</b></div>
-                <div class="card-body" style="display:@ProgressDisplay">
-                    <h6>Not started: @NotStartedTasks</h6>
-                    <h6>In progress: @InProgressTasks</h6>
+                    <div class="card-body" style="display:@ProgressDisplay">
+                        <h6>Not started: @NotStartedTasks</h6>
+                        <h6>In progress: @InProgressTasks</h6>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
     </div>
@@ -86,35 +86,50 @@
         <div class="p-2">
             <h6><b>Current Task</b></h6>
             <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Title..." @bind="@selectedTask.UserTaskData.Title" disabled>
-                <div class="dropdown">
-                    <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button" disabled>
-                        @selectedPriority
-                    </button>
-                    <ul class="dropdown-menu @(isDropdownOpenPriorty ? "show" : "")" style="@(isDropdownOpenPriorty ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
-                        <li><a class="dropdown-item" @onclick="@(() => SelectPriority(1))">High</a></li>
-                        <li><a class="dropdown-item" @onclick="@(() => SelectPriority(2))">Medium</a></li>
-                        <li><a class="dropdown-item" @onclick="@(() => SelectPriority(3))">Low</a></li>
-                    </ul>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Title..." @bind="@selectedTask.UserTaskData.Title" disabled>
+                    <div class="dropdown">
+                        <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button" disabled>
+                            @selectedPriority
+                        </button>
+                        <ul class="dropdown-menu @(isDropdownOpenPriorty ? "show" : "")" style="@(isDropdownOpenPriorty ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
+                            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(1))">High</a></li>
+                            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(2))">Medium</a></li>
+                            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(3))">Low</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="input-group mb-3  text-center">
-                <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
-                    @if (selectedTask.TaskGUID != "")
-                    {
-                        <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTask.AssignedDate" aria-describedby="inputGroup-sizing-default" disabled>
-                    } else
-                    {
-                        <input type="date" class="form-control" aria-label="Sizing example input" value="@todayDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default" disabled>
-                    }
+            <div class="row">
+                <div class="input-group mb-3 text-center col">
+                    <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
+                        @if (selectedTask.TaskGUID != "")
+                        {
+                            <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTask.AssignedDate" aria-describedby="inputGroup-sizing-default" disabled>
+                        } else
+                        {
+                            <input type="date" class="form-control" aria-label="Sizing example input" value="@todayDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default" disabled>
+                        }
                 </div>
-            <div class="input-group" style="height:60vh">
-                <textarea class="form-control" aria-label="With textarea" @bind="@selectedTask.UserTaskData.Notes" placeholder="Notes" disabled></textarea>
-            </div>
+                <div class="col">
+                    <button type="button" class="btn btn-danger float-end ms-3">Delete</button>
+                    <div class="dropdown">
+                        <button class="btn btn-outline-secondary dropdown-toggle float-end" @onclick="ToggleDropdownStatus" type="button">
+                            @selectedStatus
+                        </button>
+                        <ul class="dropdown-menu @(isDropdownOpenStatus ? "show" : "")" style="@(isDropdownOpenStatus ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
+                            <li><a class="dropdown-item" @onclick="@(() => SelectStatus(1))">Not started</a></li>
+                            <li><a class="dropdown-item" @onclick="@(() => SelectStatus(2))">In progress</a></li>
+                            <li><a class="dropdown-item" @onclick="@(() => SelectStatus(3))">Done</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="input-group" style="height:60vh">
+                    <textarea class="form-control" aria-label="With textarea" @bind="@selectedTask.UserTaskData.Notes" placeholder="Notes" disabled></textarea>
+                </div>
             </div>
         </div>
     </div>
+</div>
 </div>
 
 @code {
@@ -134,6 +149,9 @@
     private bool isDropdownOpenPriorty = false;
     private string selectedPriority = "Medium";
     private int taskPriority = 2;
+
+    private bool isDropdownOpenStatus = false;
+    private string selectedStatus = "Not started";
 
     protected override void OnInitialized()
     {
@@ -180,6 +198,59 @@
         else if (priority == 2) { selectedPriority = "Medium"; }
     }
 
+    private void ToggleDropdownStatus()
+    {
+        isDropdownOpenStatus = !isDropdownOpenStatus;
+    }
+
+    private void SelectStatus(int status)
+    {
+        if (selectedTask.TaskGUID == "")
+        {
+            return;
+        }
+
+        DateTime time = DateTime.UtcNow;
+        List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
+
+        UserTask editTask = listUserTasks.FirstOrDefault(userTask => userTask.TaskGUID == selectedTask.TaskGUID);
+
+        if (status == 1)
+        {
+            editTask.StartDateTime = null;
+            editTask.EndDateTime = null;
+            editTask.IsDone = false;
+        }
+        else if (status == 2)
+        {
+            if (selectedTask.StartDateTime == null)
+            {
+                editTask.StartDateTime = time;
+            }
+
+            editTask.EndDateTime = null;
+            editTask.IsDone = false;
+        }
+        else
+        {
+            if (selectedTask.StartDateTime == null)
+            {
+                editTask.StartDateTime = time;
+            }
+            editTask.EndDateTime = time;
+            editTask.IsDone = true;
+        }
+
+        _auxDeskServices.Save(listUserTasks, null, false);
+        Load();
+
+        isDropdownOpenStatus = false;
+        selectedStatus = "Done";
+
+        if (status == 1) { selectedStatus = "Not started"; }
+        else if (status == 2) { selectedStatus = "In progress"; }
+
+    }
 
     private void Load()
     {
@@ -254,5 +325,19 @@
     private void SelectTask(string taskGUID)
     {
         selectedTask = listDaysUserTasks.FirstOrDefault(task => task.TaskGUID == taskGUID);
+
+        if (selectedTask.Priority == 1) { selectedPriority = "High"; }
+        else if (selectedTask.Priority == 2) { selectedPriority = "Medium"; }
+        else { selectedPriority = "Low"; }
+
+        if (selectedTask.StartDateTime == null)
+        {
+            selectedStatus = "Not started";
+        }
+        else if (selectedTask.StartDateTime != null && !selectedTask.IsDone)
+        {
+            selectedStatus = "In progress";
+        }
+        else { selectedStatus = "Done"; }
     }
 }
